# Vector-DB-from-scratch

./: .gitignore  LICENSE  README.md  REFERENCES.md  plan.md
post-01-the-blueprint/: blog.md
post-01-the-blueprint/code/: README.md  api-examples.md  cosine-similarity-preview.rs
post-01-the-blueprint/diagrams/: architecture-mermaid.md
post-02-setting-up-the-forge/: blog.md
post-02-setting-up-the-forge/code/: Cargo.toml  hello-async.rs
post-02-setting-up-the-forge/diagrams/: project-structure.md
post-03-ownership-borrowing-memory/: README.md  blog.md
post-03-ownership-borrowing-memory/code/: README.md  borrowing-examples.rs  ownership-examples.rs  slice-examples.rs
post-03-ownership-borrowing-memory/diagrams/: ownership-move.md  stack-heap.md
post-04-structs-enums-error-handling/: README.md  blog.md
post-04-structs-enums-error-handling/code/: enums-examples.rs  models.rs
post-04-structs-enums-error-handling/diagrams/: mermaid-diagrams.md
post-05-async-axum/: README.md  blog.md
post-05-async-axum/code/: Cargo.toml  main-server.rs  models-serde.rs
post-06-binary-file-formats/: README.md  blog.md
post-06-binary-file-formats/code/: binary-io.rs  segment-format.rs
post-07-mmap/: README.md  blog.md
post-08-wal/: README.md  blog.md
post-08-wal/code/: wal-entry.rs  wal.rs
post-09-crash-recovery/: README.md  blog.md
post-09-crash-recovery/code/: recovery.rs
post-10-concurrency/: README.md  blog.md
post-10-concurrency/code/: shared-state.rs
post-11-vector-math/: README.md  blog.md
post-11-vector-math/code/: similarity-demo.rs
post-12-brute-force/: README.md  blog.md
post-12-brute-force/code/: Cargo.toml
post-12.5-heaps-deep-dive/: README.md  blog.md
post-12.5-heaps-deep-dive/code/: Cargo.toml  heap-demo.rs
post-13-hnsw-intro/: README.md  blog.md
post-13-hnsw-intro/code/: Cargo.toml  graph-search-demo.rs
post-14-hnsw-impl-1/: README.md  blog.md
post-14-hnsw-impl-1/code/: neighbor-selection.rs
post-15-hnsw-impl-2/: README.md  blog.md
post-15-hnsw-impl-2/code/: search-impl.rs
post-16-benchmarking/: README.md  blog.md
post-16-benchmarking/code/: Cargo.toml  comparison-suite.rs
post-17-inverted-indexes/: README.md  blog.md
post-17-inverted-indexes/code/: inverted-index.rs
post-18-tantivy-hybrid/: README.md  blog.md
post-18-tantivy-hybrid/code/: Cargo.toml  hybrid-search.rs  tantivy-integration.rs
post-19-query-planning/: README.md  blog.md
post-19-query-planning/code/: execution-engine.rs  query-planner.rs
post-20-production/: README.md  blog.md
post-20-production/code/: Cargo.toml  Dockerfile  docker-compose.yml  quantization.rs  simd-distance.rs
posts/01-the-blueprint/: frontmatter.yaml  index.md
posts/01-the-blueprint/code/: Cargo.toml
posts/02-setting-up-the-forge/: frontmatter.yaml  index.md
posts/02-setting-up-the-forge/code/: Cargo.toml  README.md  settings.json
posts/03-ownership-borrowing-memory/: frontmatter.yaml  index.md
posts/03-ownership-borrowing-memory/code/: Cargo.toml
posts/04-structs-enums-error-handling/: frontmatter.yaml  index.md
posts/04-structs-enums-error-handling/code/: Cargo.toml  error-handling.rs  structs-examples.rs
posts/05-async-axum/: frontmatter.yaml  index.md
posts/05-async-axum/code/: main-server.rs  models-serde.rs
posts/06-binary-file-formats/: frontmatter.yaml  index.md
posts/06-binary-file-formats/code/: Cargo.toml
posts/07-mmap/: frontmatter.yaml  index.md
posts/07-mmap/code/: Cargo.toml  mmap-basics.rs  mmap-segment.rs
posts/08-wal/: frontmatter.yaml  index.md
posts/08-wal/code/: Cargo.toml
posts/09-crash-recovery/: frontmatter.yaml  index.md
posts/09-crash-recovery/code/: Cargo.toml  compaction.rs
posts/10-concurrency/: frontmatter.yaml  index.md
posts/10-concurrency/code/: Cargo.toml  axum-server.rs
posts/11-vector-math/: frontmatter.yaml  index.md
posts/11-vector-math/code/: Cargo.toml  vector-math.rs
posts/12-brute-force/: frontmatter.yaml  index.md
posts/12-brute-force/code/: benchmark.rs  brute-force-search.rs
posts/12.5-heaps-deep-dive/: frontmatter.yaml  index.md
posts/13-hnsw-intro/: frontmatter.yaml  index.md
posts/13-hnsw-intro/code/: skip-list-demo.rs
posts/14-hnsw-impl-1/: frontmatter.yaml  index.md
posts/14-hnsw-impl-1/code/: Cargo.toml  hnsw-basic.rs
posts/15-hnsw-impl-2/: frontmatter.yaml  index.md
posts/15-hnsw-impl-2/code/: Cargo.toml  benchmark-recall.rs
posts/16-benchmarking/: frontmatter.yaml  index.md
posts/16-benchmarking/code/: benchmark-harness.rs
posts/17-inverted-indexes/: frontmatter.yaml  index.md
posts/17-inverted-indexes/code/: Cargo.toml  boolean-ops.rs
posts/18-tantivy-hybrid/: frontmatter.yaml  index.md
posts/19-query-planning/: frontmatter.yaml  index.md
posts/19-query-planning/code/: Cargo.toml  benchmarks.rs
posts/20-production/: frontmatter.yaml  index.md
posts/20-production/code/: .github-workflows-ci.yml  check_regression.py
vectordb/: Cargo.toml
vectordb/src/: lib.rs  main.rs  models.rs
