[package]
name = "post10-concurrency"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "shared-state"
path = "shared-state.rs"

[[bin]]
name = "axum-server"
path = "axum-server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
